# google-style-docstrings

./: .gitignore  .readthedocs.yaml  AUTHORS.md  README.rst  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/api/: google_style.rst
docs/source/api/google_style/: example_google.rst
docs/source/contents/: example_google.rst  google_style.rst
src/google_style/: __init__.py
